--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mindcastv3",
+  "name": "mindCastV3",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,6 +11,7 @@
     "flow": "flow"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.7",
     "axios": "^0.19.2",
     "path": "^0.12.7",
     "react": "16.9.0",
@@ -21,12 +22,17 @@
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-reanimated": "^1.7.1",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.4.0",
     "react-native-side-menu": "^1.1.3",
     "react-native-splash-screen": "^3.2.0",
     "react-native-swipeout": "^2.3.6",
     "react-native-vector-icons": "^6.6.0",
     "react-native-video": "^4.4.5",
-    "react-navigation": "^4.3.3",
+    "react-navigation": "^3.3.0",
+    "react-navigation-stack": "^2.3.6",
+    "react-navigation-tabs": "^2.8.7",
     "react-redux": "^7.2.0",
     "reactotron-react-native": "^4.0.3",
     "reactotron-redux": "^3.1.2",
