--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,8 +1,8 @@
 platform :ios, '9.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-target 'mindCastV3' do
-  # Pods for mindCastV3
+target 'snippt' do
+  # Pods for snippt
   pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
   pod 'FBReactNativeSpec', :path => "../node_modules/react-native/Libraries/FBReactNativeSpec"
   pod 'RCTRequired', :path => "../node_modules/react-native/Libraries/RCTRequired"
@@ -34,7 +34,7 @@ target 'mindCastV3' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
-  target 'mindCastV3Tests' do
+  target 'snipptTests' do
     inherit! :search_paths
     # Pods for testing
   end
@@ -42,10 +42,10 @@ target 'mindCastV3' do
   use_native_modules!
 end
 
-target 'mindCastV3-tvOS' do
-  # Pods for mindCastV3-tvOS
+target 'snippt-tvOS' do
+  # Pods for snippt-tvOS
 
-  target 'mindCastV3-tvOSTests' do
+  target 'snippt-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
