--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
     "flow": "flow"
   },
   "dependencies": {
+    "@react-native-community/google-signin": "^4.0.0",
     "@react-native-community/masked-view": "^0.1.7",
+    "@react-native-firebase/app": "^6.4.1",
+    "@react-native-firebase/auth": "^6.4.1",
     "axios": "^0.19.2",
     "path": "^0.12.7",
-    "react": "16.9.0",
-    "react-native": "0.61.5",
+    "react": "16.11.0",
+    "react-native": "0.62.2",
     "react-native-config": "^1.0.0",
     "react-native-dotenv": "^0.2.0",
     "react-native-fast-image": "^8.1.5",
+    "react-native-fbsdk": "^1.1.2",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
@@ -43,14 +47,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
-    "@babel/runtime": "^7.9.2",
+    "@babel/runtime": "^7.6.2",
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.9.0",
     "babel-plugin-root-import": "^6.5.0",
     "eslint": "^6.5.1",
     "flow-bin": "^0.120.0",
     "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.56.0",
+    "metro-react-native-babel-preset": "^0.58.0",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
