--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-screens": "^2.4.0",
     "react-native-side-menu": "^1.1.3",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-svg": "^12.1.0",
     "react-native-swipeout": "^2.3.6",
     "react-native-vector-icons": "^6.6.0",
     "react-native-video": "^4.4.5",
