--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.19.2",
     "path": "^0.12.7",
     "react": "16.11.0",
+    "react-devtools": "^4.6.0",
     "react-native": "0.62.2",
     "react-native-config": "^1.0.0",
     "react-native-dotenv": "^0.2.0",
