--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@react-native-community/masked-view": "^0.1.7",
     "@react-native-firebase/app": "^6.4.1",
     "@react-native-firebase/auth": "^6.4.1",
+    "@react-native-firebase/firestore": "^6.7.1",
     "axios": "^0.19.2",
     "path": "^0.12.7",
     "react": "16.11.0",
     "react-devtools": "^4.6.0",
-    "react-native": "0.62.2",
+    "react-native": "0.62",
     "react-native-config": "^1.0.0",
     "react-native-dotenv": "^0.2.0",
     "react-native-fast-image": "^8.1.5",
@@ -49,14 +50,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
-    "@babel/runtime": "^7.6.2",
+    "@babel/runtime": "^7.9.6",
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.9.0",
     "babel-plugin-root-import": "^6.5.0",
     "eslint": "^6.5.1",
     "flow-bin": "^0.120.0",
     "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.58.0",
+    "metro-react-native-babel-preset": "^0.57.0",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
