--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/masked-view": "^0.1.7",
     "@react-native-firebase/app": "^6.4.1",
     "@react-native-firebase/auth": "^6.4.1",
+    "@react-native-firebase/firestore": "^6.7.1",
     "axios": "^0.19.2",
     "path": "^0.12.7",
     "react": "16.11.0",
